// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Films > with empty list > should match snapshot 1`] = `
<div
  data-testid="films"
>
  <p
    data-testid="films-title"
  >
    Films
  </p>
  <p
    data-testid="films-empty"
  >
    No 
    films
     linked
  </p>
</div>
`;

exports[`Films > with filled list > should match snapshot 1`] = `
<div
  data-testid="films"
>
  <p
    data-testid="films-title"
  >
    Films
  </p>
  <ul>
    <li
      data-testid="films-0"
    >
      VALUE_1
    </li>
    <li
      data-testid="films-1"
    >
      VALUE_2
    </li>
  </ul>
</div>
`;
